# agent-gate

./: .gitignore  AARM_Alignment.md  COMPLIANCE.md  README.md  ROADMAP.md  ROADMAP_v2.md  pyproject.toml
agent_gate/: audit.py  classifier.py  classifier_base.py  cli.py  gate.py  identity.py  mcp_jsonrpc.py  mcp_proxy.py  modifier.py  opa_classifier.py  policy_loader.py  proxy_config.py  rate_tracker.py  vault.py  yaml_to_rego.py
docs/plans/: 2026-02-23-phase7-modify-design.md
integrations/claude_code/: README.md  agent_gate_hook.py  agent_gate_hook_write.py  settings_example.json  test_setup.sh
policies/: default.yaml
rego/: agent_gate.rego  agent_gate_test.rego
tasks/: MASTER.md  PHASE-8A_Prompts.md  PHASE7_MODIFY_REFERENCE.md  PHASE7_PROMPT_REVISED.md  PHASE_6_3_gate.md  PHASE_6_5_opa_rego.md  PHASE_6_6_mcp_proxy.md  PHASE_6_7_documentation.md  agent_gate_modify_research.md
tasks/phase6-identity/: PHASE_6_1_identity.md  PHASE_6_2_policy_loader.md  PHASE_6_4_audit.md
tests/: test_audit.py  test_audit_hash.py  test_audit_hierarchy.py  test_audit_identity.py  test_audit_modify.py  test_classifier_modify.py  test_cli_tree.py  test_gate.py  test_gate_feedback.py  test_gate_identity.py  test_gate_modify.py  test_gate_rates.py  test_identity.py  test_integration_mcp.py  test_mcp_jsonrpc.py  test_mcp_proxy.py  test_mcp_proxy_identity.py  test_mcp_proxy_modify.py  test_modifier.py  test_opa_identity.py  test_opa_modify.py  test_policy_loader_identity.py  test_policy_loader_modify.py  test_policy_loader_rates.py  test_proxy_config.py  test_rate_tracker.py
(+10 files in other folders)
